QtBeef/src/Qt/qabstractbutton.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QAbstractButton
// --------------------------------------------------------------
[CRepr]
struct QAbstractButton_Ptr: void
{
}
extension CQt
{
	[LinkName("QAbstractButton_new")]
	public static extern QAbstractButton_Ptr* QAbstractButton_new(QWidget_Ptr* parent);
	[LinkName("QAbstractButton_new2")]
	public static extern QAbstractButton_Ptr* QAbstractButton_new2();
	[LinkName("QAbstractButton_Delete")]
	public static extern void QAbstractButton_Delete(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_MetaObject")]
	public static extern QMetaObject_Ptr* QAbstractButton_MetaObject(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_Qt_Metacast")]
	public static extern void* QAbstractButton_Qt_Metacast(QAbstractButton_Ptr* self, c_char* param1);
	[LinkName("QAbstractButton_Qt_Metacall")]
	public static extern c_int QAbstractButton_Qt_Metacall(QAbstractButton_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QAbstractButton_Tr")]
	public static extern libqt_string QAbstractButton_Tr(c_char* s);
	[LinkName("QAbstractButton_SetText")]
	public static extern void QAbstractButton_SetText(QAbstractButton_Ptr* self, libqt_string* text);
	[LinkName("QAbstractButton_Text")]
	public static extern libqt_string QAbstractButton_Text(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_SetIcon")]
	public static extern void QAbstractButton_SetIcon(QAbstractButton_Ptr* self, QIcon_Ptr* icon);
	[LinkName("QAbstractButton_Icon")]
	public static extern QIcon_Ptr QAbstractButton_Icon(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_IconSize")]
	public static extern QSize_Ptr QAbstractButton_IconSize(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_SetShortcut")]
	public static extern void QAbstractButton_SetShortcut(QAbstractButton_Ptr* self, QKeySequence_Ptr* key);
	[LinkName("QAbstractButton_Shortcut")]
	public static extern QKeySequence_Ptr QAbstractButton_Shortcut(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_SetCheckable")]
	public static extern void QAbstractButton_SetCheckable(QAbstractButton_Ptr* self, bool checkable);
	[LinkName("QAbstractButton_IsCheckable")]
	public static extern bool QAbstractButton_IsCheckable(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_IsChecked")]
	public static extern bool QAbstractButton_IsChecked(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_SetDown")]
	public static extern void QAbstractButton_SetDown(QAbstractButton_Ptr* self, bool down);
	[LinkName("QAbstractButton_IsDown")]
	public static extern bool QAbstractButton_IsDown(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_SetAutoRepeat")]
	public static extern void QAbstractButton_SetAutoRepeat(QAbstractButton_Ptr* self, bool autoRepeat);
	[LinkName("QAbstractButton_AutoRepeat")]
	public static extern bool QAbstractButton_AutoRepeat(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_SetAutoRepeatDelay")]
	public static extern void QAbstractButton_SetAutoRepeatDelay(QAbstractButton_Ptr* self, c_int autoRepeatDelay);
	[LinkName("QAbstractButton_AutoRepeatDelay")]
	public static extern c_int QAbstractButton_AutoRepeatDelay(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_SetAutoRepeatInterval")]
	public static extern void QAbstractButton_SetAutoRepeatInterval(QAbstractButton_Ptr* self, c_int autoRepeatInterval);
	[LinkName("QAbstractButton_AutoRepeatInterval")]
	public static extern c_int QAbstractButton_AutoRepeatInterval(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_SetAutoExclusive")]
	public static extern void QAbstractButton_SetAutoExclusive(QAbstractButton_Ptr* self, bool autoExclusive);
	[LinkName("QAbstractButton_AutoExclusive")]
	public static extern bool QAbstractButton_AutoExclusive(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_Group")]
	public static extern QButtonGroup_Ptr* QAbstractButton_Group(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_SetIconSize")]
	public static extern void QAbstractButton_SetIconSize(QAbstractButton_Ptr* self, QSize_Ptr* size);
	[LinkName("QAbstractButton_AnimateClick")]
	public static extern void QAbstractButton_AnimateClick(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_Click")]
	public static extern void QAbstractButton_Click(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_Toggle")]
	public static extern void QAbstractButton_Toggle(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_SetChecked")]
	public static extern void QAbstractButton_SetChecked(QAbstractButton_Ptr* self, bool _checked);
	[LinkName("QAbstractButton_Pressed")]
	public static extern void QAbstractButton_Pressed(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_Released")]
	public static extern void QAbstractButton_Released(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_Clicked")]
	public static extern void QAbstractButton_Clicked(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_Toggled")]
	public static extern void QAbstractButton_Toggled(QAbstractButton_Ptr* self, bool _checked);
	[LinkName("QAbstractButton_PaintEvent")]
	public static extern void QAbstractButton_PaintEvent(QAbstractButton_Ptr* self, QPaintEvent_Ptr* e);
	[LinkName("QAbstractButton_HitButton")]
	public static extern bool QAbstractButton_HitButton(QAbstractButton_Ptr* self, QPoint_Ptr* pos);
	[LinkName("QAbstractButton_CheckStateSet")]
	public static extern void QAbstractButton_CheckStateSet(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_NextCheckState")]
	public static extern void QAbstractButton_NextCheckState(QAbstractButton_Ptr* self);
	[LinkName("QAbstractButton_Event")]
	public static extern bool QAbstractButton_Event(QAbstractButton_Ptr* self, QEvent_Ptr* e);
	[LinkName("QAbstractButton_KeyPressEvent")]
	public static extern void QAbstractButton_KeyPressEvent(QAbstractButton_Ptr* self, QKeyEvent_Ptr* e);
	[LinkName("QAbstractButton_KeyReleaseEvent")]
	public static extern void QAbstractButton_KeyReleaseEvent(QAbstractButton_Ptr* self, QKeyEvent_Ptr* e);
	[LinkName("QAbstractButton_MousePressEvent")]
	public static extern void QAbstractButton_MousePressEvent(QAbstractButton_Ptr* self, QMouseEvent_Ptr* e);
	[LinkName("QAbstractButton_MouseReleaseEvent")]
	public static extern void QAbstractButton_MouseReleaseEvent(QAbstractButton_Ptr* self, QMouseEvent_Ptr* e);
	[LinkName("QAbstractButton_MouseMoveEvent")]
	public static extern void QAbstractButton_MouseMoveEvent(QAbstractButton_Ptr* self, QMouseEvent_Ptr* e);
	[LinkName("QAbstractButton_FocusInEvent")]
	public static extern void QAbstractButton_FocusInEvent(QAbstractButton_Ptr* self, QFocusEvent_Ptr* e);
	[LinkName("QAbstractButton_FocusOutEvent")]
	public static extern void QAbstractButton_FocusOutEvent(QAbstractButton_Ptr* self, QFocusEvent_Ptr* e);
	[LinkName("QAbstractButton_ChangeEvent")]
	public static extern void QAbstractButton_ChangeEvent(QAbstractButton_Ptr* self, QEvent_Ptr* e);
	[LinkName("QAbstractButton_TimerEvent")]
	public static extern void QAbstractButton_TimerEvent(QAbstractButton_Ptr* self, QTimerEvent_Ptr* e);
	[LinkName("QAbstractButton_Tr2")]
	public static extern libqt_string QAbstractButton_Tr2(c_char* s, c_char* c);
	[LinkName("QAbstractButton_Tr3")]
	public static extern libqt_string QAbstractButton_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QAbstractButton_Clicked1")]
	public static extern void QAbstractButton_Clicked1(QAbstractButton_Ptr* self, bool _checked);
}
